# nabla-hooks

./: .ansible-lint  .bandit  .bandit.yml  .checkov.yml  .codeclimate.yml  .coveragerc  .cspell.json  .cz.yaml  .deepsource.toml  .dockerignore  .editorconfig  .editorconfig-checker.json  .env.local  .envrc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaks.toml-SAV  .gitlint  .gitpod.yml  .groovylintrc.json  .grype.yaml  .hadolint.yaml  .jscpd.json  .ls-lint.yml  .markdown-link-check.json  .markdownlint.json  .mega-linter.yml  .opencommit-commitlint  .opencommitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.yaml  .proselintrc  .pylintrc  .python-version  .pyup.yml  .readthedocs.yaml  (+61 more)
.cursor/rules/: 150_packaging.mdc  160_cloud-services-aws.mdc
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: CONTRIBUTING.md  FUNDING.yml  GITHUB_ACTIONS.md  IMPROVEMENTS_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/linters/: .sqlfluff  .yamllint.yml
.github/workflows/: codeql.yml  copilot-setup-steps.yml  linter.yml  opencommit.yml  pylint.yml  python.yml  pythonpublish.yml  release.yml  renovate.yml  test-specific.yml  tests.yml
.gitlab/: dependabot.yml  renovate.json
ccds/: __init__.py  __main__.py  monkey_patch.py
ccds/hook_utils/: configure_gh.py  configure_ssh.py  configure_vcs.py  cookiecutter_args.py  dependencies.py
docs/: Makefile  README.md  build.sh  code.html  code.tex  conf.py  index.rst  library.rst  make.bat  quality.rst  roles.rst  setup.rst
etc/: pip.conf
examples/: .pre-commit-config-jira.yaml
hooks/: __init__.py  __main__.py  _version.py  commit-msg  get_msg.py  get_repo.py  pre-commit  prepare-commit-msg  prepare_commit_msg.py  requirements-current-3.6.txt  requirements-current-3.7.txt  requirements-current-3.8.txt  validate_jira.py
hooks/docs/: conf.py  index.rst  library.rst  quality.rst  setup.rst
hooks/get_jira/: __init__.py  get_auth.py  get_jira.py
hooks/get_jira/test/: check_certificates.py
hooks/test/: test_nabla_version.py  test_pytest.py
hooks/tests/: pytest_test.py
nabla/: README.md  __init__.py  main.py
nabla/api/: api.py  app.py  v1.py
pre_commit_hooks/: git-branches-check.sh  jenkinsfile-check.sh  jira-check.sh  step-0-color.sh
scripts/: run-bandit.sh  run-deploy.sh  run-flake8.sh  run-install.sh  run-pylint.sh  run-python.sh  run-test.sh  step-0-color.sh  step-1-os.sh
test/: .pre-commit-config.yaml  __init__.py  bandit.sh  check_certificates.py  init.sh  pytest.sh  run-bandit.sh  test-sample.sh  test.sh  test_nabla_version.py  test_package.py  test_pytest.py  test_sample.sh  test_unittest.py  version.sh
tests/: __init__.py  check_certificates.py  init.sh  pytest.sh  test.sh  test_get_auth.py  test_get_msg.py  test_get_repo.py  test_jira_check.sh  test_jira_integration.sh  test_nabla_version.py  test_oco_integration.sh  test_package.py  test_prepare_commit_msg.py  test_sample.sh  test_unittest.py  test_validate_jira.py  version.sh
tests/unit/: test_api.py  test_api_endpoints.py
