[metadata]
name = nabla_hooks
description = Checks playbooks for practices and behaviour that could potentially be improved
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlbanAndrieu/nabla-hooks
author = Alban Andrieu
author_email = alban.andrieu@free.fr
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 1 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    pre-commit
    hooks
    jira
maintainer = Alban Andrieu
maintainer_email = alban.andrieu@free.fr
project_urls =
    Bug Tracker = https://github.com/AlbanAndrieu/nabla-hooks/issues
    CI: Travis = https://travis-ci.com/AlbanAndrieu/nabla-hooks
    Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
    Documentation = https://github.com/AlbanAndrieu/nabla-hooks
    Mailing lists = https://github.com/AlbanAndrieu/nabla-hooks
    Source Code = https://github.com/AlbanAndrieu/nabla-hooks

[options]
packages = find:
install_requires =
    GitPython
    aspy.yaml
    git-url-parse
    jira
    podmena
    termcolor
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*
#package_dir =
#    = lib/
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
use_scm_version = True
zip_safe = False

[options.entry_points]
console_scripts =
    nabla-hooks = hooks.get_msg:main

[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git,.hg,.svn,test,setup.py,__pycache__,docs,.tox,.eggs,env

[options.packages.find]
where = lib
