[metadata]
name = nabla_hooks
version = 1.0.6
description = Custom hooks to improve code quality before pushing to git
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.9, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*
use_scm_version = True
zip_safe = False

[options.packages.find]
where = lib

[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git,.hg,.svn,test,setup.py,__pycache__,docs,.tox,.eggs,env
